--- a/pizza-shop/index.html
+++ b/pizza-shop/index.html
@@ -3,11 +3,10 @@
 <head>
   <meta charset="utf-8">
   <title>App</title>
-  <base href="/pizza-shop">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="/pizza-shop/favicon.ico">
-<link rel="stylesheet" href="/pizza-shop/styles.3dc5dbea77ddf9c75e75.css"></head>
+  <base href="/pizza-shop">  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="icon" type="image/x-icon" href="favicon.ico">
+<link rel="stylesheet" href="styles.3dc5dbea77ddf9c75e75.css"></head>
 <body>
   <app-root></app-root>
-<script src="/pizza-shop/runtime-es2015.2be40838002cc103da12.js" type="module"></script><script src="/pizza-shop/runtime-es5.2be40838002cc103da12.js" nomodule defer></script><script src="/pizza-shop/polyfills-es5.3a33752cde846b737169.js" nomodule defer></script><script src="/pizza-shop/polyfills-es2015.dfffc71a91be1c79d4ee.js" type="module"></script><script src="/pizza-shop/main-es2015.9f06ba7d4d185bd60095.js" type="module"></script><script src="/pizza-shop/main-es5.9f06ba7d4d185bd60095.js" nomodule defer></script></body>
+<script src="runtime-es2015.2be40838002cc103da12.js" type="module"></script><script src="runtime-es5.2be40838002cc103da12.js" nomodule defer></script><script src="polyfills-es5.3a33752cde846b737169.js" nomodule defer></script><script src="polyfills-es2015.dfffc71a91be1c79d4ee.js" type="module"></script><script src="main-es2015.9f06ba7d4d185bd60095.js" type="module"></script><script src="main-es5.9f06ba7d4d185bd60095.js" nomodule defer></script></body>
 </html>
