--- a/pizza-shop/index.html
+++ b/pizza-shop/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>App</title>
-  <base href="/pizza-shop">  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <base href="/pizza-shop/">  <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 <link rel="stylesheet" href="styles.3dc5dbea77ddf9c75e75.css"></head>
 <body>
