--- a/pizza-shop/404.html
+++ b/pizza-shop/404.html
@@ -1,12 +1,14 @@
 <!doctype html>
-<html lang="en">
+<html>
 <head>
-  <meta charset="utf-8">
-  <title>App</title>
-  <base href="/pizza-shop/">  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-<link rel="stylesheet" href="/pizza-shop/styles.3dc5dbea77ddf9c75e75.css"></head>
+  <!-- This stores the URL the user was attempting to go to in sessionStorage,
+  and then redirects all 404 responses to the app’s index.html page -->
+  <!-- See http://www.backalleycoder.com/2016/05/13/sghpa-the-single-page-app-hack-for-github-pages/ -->
+  <script>
+      sessionStorage.redirect = location.href;
+  </script>
+  <meta http-equiv="refresh" content="0;URL='https://killbond.github.io/pizza-shop'"></meta>
+</head>
 <body>
-  <app-root></app-root>
-<script src="/pizza-shop/runtime-es2015.6b60b77ca5930a0debbb.js" type="module"></script><script src="/pizza-shop/runtime-es5.6b60b77ca5930a0debbb.js" nomodule defer></script><script src="/pizza-shop/polyfills-es5.3a33752cde846b737169.js" nomodule defer></script><script src="/pizza-shop/polyfills-es2015.dfffc71a91be1c79d4ee.js" type="module"></script><script src="/pizza-shop/main-es2015.9f06ba7d4d185bd60095.js" type="module"></script><script src="/pizza-shop/main-es5.9f06ba7d4d185bd60095.js" nomodule defer></script></body>
+</body>
 </html>
